--- a/workflow-laravel-mix-6-2/src/styles/app.scss
+++ b/workflow-laravel-mix-6-2/src/styles/app.scss
@@ -1,2 +1,10 @@
 @import 'utils/variables';
 @import 'components/type';
+
+
+h1{
+    font-family: "fit", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 28%;
+}
