--- a/workflow-laravel-mix-6-2/src/styles/components/_type.scss
+++ b/workflow-laravel-mix-6-2/src/styles/components/_type.scss
@@ -1,10 +1,99 @@
 body {
   font-family: sans-serif;
   font-size: $size-text;
-  line-height: 1.5;
+  line-height: 1.4;
   color: $c-text;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.title {
-  color: $c-alt;
+.typo__crb{
+  font-family: "Mr Dafoe", 'cursive';
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 28%;
 }
+
+
+.section{
+  position: relative;
+  height: auto;
+  width: clamp(21.5625rem, -1.6286rem + 95.1429vw, 84rem);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  &__header{
+    background-color: blueviolet;
+
+    .title__P{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        background-color: antiquewhite;
+
+        h1{
+          font-family: "fit", sans-serif;
+          font-weight: 400;
+          font-style: normal;
+          letter-spacing: 23%;
+          text-align: center;
+          line-height: 0;
+          padding-left: 7%;
+          font-size: clamp(6.5625rem, 0.0625rem + 26.6667vw, 24.0625rem);
+        }
+
+        .arthur{
+          position: absolute;
+          top: clamp(3.4375rem, 0.6518rem + 11.4286vw, 10.9375rem);
+          font-size: clamp(1.4375rem, 0.2536rem + 4.8571vw, 4.625rem);
+          color: $c-bleu;
+        }
+    }
+
+    .element__header{
+      position: relative;
+      width: clamp(21.5625rem, -1.6286rem + 95.1429vw, 84rem);
+      background-color: aquamarine;
+      display: flex;
+      justify-content: space-between;
+      align-items: end;
+
+      p{
+        font-family: "futura-pt-bold", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        text-transform: uppercase;
+
+        span{
+          font-family: "Mr Bedfort", cursive;
+          font-weight: 400;
+          font-style: normal;
+        }
+      }
+
+      .elgraphique__header{
+        width: clamp(8.5rem, 5.25rem + 13.3333vw, 17.25rem);
+        height: clamp(4.00375rem, 2.473rem + 6.28vw, 8.125rem);
+        background-color: brown;
+      }
+    }
+
+    &--02{
+      p{
+        text-transform: none;
+      }
+    }
+
+
+  }
+
+}
+
+
+
+
