--- a/workflow-laravel-mix-6-2/src/styles/utils/_variables.scss
+++ b/workflow-laravel-mix-6-2/src/styles/utils/_variables.scss
@@ -3,3 +3,23 @@ $c-bleu: #95C3EA;
 $c-text: #3E3E3E;
 
 $size-text: 18px;
+
+
+
+
+
+
+
+
+.typo__crb{
+    font-family: "Mr Dafoe", 'cursive';
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 28%;
+}
+
+img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
