--- a/workflow-laravel-mix-6-2/src/styles/components/_type.scss
+++ b/workflow-laravel-mix-6-2/src/styles/components/_type.scss
@@ -8,6 +8,7 @@ body {
   align-items: center;
   justify-content: center;
   color: $c-text;
+  position: relative;
 }
 
 
@@ -21,6 +22,25 @@ body {
   flex-direction: column;
 
 }
+
+.section__fond{
+  position: absolute;
+  display: flex;
+  height: 100%;
+  top: 0;
+  z-index: -2;
+  flex-direction: row;
+  opacity: 0.5;
+  pointer-events: none;
+
+  div{
+    height: 100%;
+    width: clamp(3.5rem, -0.2607rem + 15.4286vw, 13.625rem);
+    border-left: 1px solid #3E3E3E;
+    border-right: 1px solid #3E3E3E;
+  }
+}
+
 
 .section__header{
 
@@ -64,20 +84,19 @@ body {
   .element__header{
     position: relative;
     width: clamp(21.5625rem, -1.6286rem + 95.1429vw, 84rem);
-    //top: clamp(26.25rem, 36rem + -40vw, 0rem);
+    font-size: clamp(1.25rem, 0.8979rem + 1.5023vw, 2.25rem);
     display: flex;
     justify-content: space-between;
     align-items: end;
-    top : 26.25rem;
+    top : 20rem;
     border-top: 1px solid #3E3E3E;
 
 
     @media (min-width: 780px) {
           top : 0%;
-        
-      
-
     }
+
+  
 
 
     p{
@@ -110,6 +129,7 @@ body {
       width: 120px;
       text-align: left;
       line-height: 1;
+      font-size: clamp(0.6875rem, 0.6215rem + 0.2817vw, 0.875rem);
     }
   }
 
@@ -119,68 +139,109 @@ body {
 
 
 .section__perso{
-  margin-top: 210px;
-  background-color: #3E3E3E;
-  width: 100%;
-  height: 300px;
+  position: relative;
+  height: auto;
+  margin-top: 22rem;
+
+  
+
+  @media (min-width: 780px) {
+    margin-top: 5rem;
+  }
+
+  div{
+    display: flex;
+    justify-content: space-between;
+
+    p{
+      font-family: "futura-pt-bold", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        text-transform: uppercase;
+        font-size: clamp(1.625rem, 1.1607rem + 1.9048vw, 2.875rem);
+        color:$c-text;
+    }
+
+    svg{
+      width: clamp(15rem, 5.1085rem + 42.2038vw, 43.091875rem);
+    }
+  }
+
+
 }
 
 
 
 .section__projets{
 
-  margin-top: 210px;
+  margin-top: clamp(9.6875rem, 7.1339rem + 10.4762vw, 16.5625rem);
 
-  .elgraphique__big{
-    width: 100%;
-    background-color: brown;
-    height: clamp(1.5rem, 0.4786rem + 4.1905vw, 4.25rem);
-  }
+  ul{
+    padding-left: 0;
+    margin-left: 0;
 
-  a{
-  
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color: $c-text;
-    text-decoration: none;
-    border-bottom: 1px solid #3E3E3E ;
-    border-top: 1px solid #3E3E3E ;
-
-
-    *{
-      cursor: pointer;
+    .elgraphique__big{
+      position: absolute;
+      width: 100%;
+      background-color: brown;
+      height: clamp(1.5rem, 0.4786rem + 4.1905vw, 4.25rem);
     }
-
-    li{
+  
+    a{
+    
       position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
-
-      h3{
-        font-family: "fit", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        letter-spacing: 28%;
-        text-align: center;
-        padding-left: 3%;
-        line-height: 0;
-        font-size: clamp(4.75rem, 0.2464rem + 18.4762vw, 16.875rem);
+      color: $c-text;
+      text-decoration: none;
+      border-bottom: 1px solid #3E3E3E ;
+      border-top: 1px solid #3E3E3E ;
+  
+  
+      *{
+        cursor: pointer;
       }
   
-      p{
-        position: absolute;
-        top: clamp(3.4375rem, 0.6518rem + 11.4286vw, 10.9375rem);
-        font-size: clamp(1.4375rem, 0.2536rem + 4.8571vw, 4.625rem);
-        color: $c-bleu;
+      li{
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+  
+        h3{
+          font-family: "futura-pt-bold", sans-serif;
+          font-weight: 200;
+          font-style: normal;
+          text-transform: uppercase;
+          text-align: center;
+          padding-left: 3%;
+          line-height: 0;
+          font-size: clamp(4.125rem, -0.6107rem + 19.4286vw, 16.875rem);
+        }
+    
+        p{
+          position: absolute;
+          top: clamp(3.4375rem, 0.6518rem + 11.4286vw, 10.9375rem);
+          font-size: clamp(1.4375rem, 0.2536rem + 4.8571vw, 4.625rem);
+          color: $c-bleu;
+        }
       }
+  
     }
-
   }
+}
+
+
+
+.section__footer{
+  height: 400px;
+  background-color: brown;
+  position: relative;
+  margin-top:  11rem;
+  height: clamp(14.375rem, 7.7729rem + 28.169vw, 33.125rem);
 }
 
 
