--- a/workflow-laravel-mix-6-2/src/styles/utils/_variables.scss
+++ b/workflow-laravel-mix-6-2/src/styles/utils/_variables.scss
@@ -1,21 +1,13 @@
 $c-bg: #efefef;
 $c-bleu: #95C3EA;
-$c-text: #3E3E3E;
+$c-text: #313131;
 
 $size-text: 18px;
 
-
-
-
-
-
-
-
-.typo__crb{
-    font-family: "Mr Dafoe", 'cursive';
+.eight{
+    font-family: "eight", sans-serif;
     font-weight: 400;
     font-style: normal;
-    letter-spacing: 28%;
 }
 
 img{
