--- a/workflow-laravel-mix-6-2/src/styles/components/_type.scss
+++ b/workflow-laravel-mix-6-2/src/styles/components/_type.scss
@@ -14,6 +14,11 @@ body {
   overflow-x: hidden;
 }
 
+a{
+  color: $c-text;
+  text-decoration: none;
+}
+
 ////////////////////:: Element de fond + souris
 
 .fond{
@@ -244,18 +249,22 @@ main{
     display: flex;
     justify-content: space-between;
     border: 1px solid #000;
-    font-weight: 600;
-    font-size: 2rem;
 
 
 
     .section__projets__role{
       font-size: 1rem;
       font-weight: 400;
-
+      padding-right: 11px;
       display: flex;
       align-items: center;
       justify-content: space-between;
+    }
+
+    .txt__gras{
+      padding-left: 11px;
+      font-weight: 600;
+      font-size: 2rem;
     }
   }
 
@@ -264,3 +273,64 @@ main{
     cursor: pointer;
   }
 }
+
+
+.section__contact{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding-left: 11px;
+
+  h3{
+    font-size: clamp(2.25rem, 1.0417rem + 5.3704vw, 5.875rem);
+    line-height: 0;
+    padding-top: 12.125rem;
+  }
+
+  div{
+    padding-left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    border: 1px solid #000;
+
+    .txt__gras{
+      padding-left: 11px;
+      font-weight: 600;
+      font-size: 2rem;
+    }
+  }
+}
+
+
+/////////////////////////////////////////////////
+
+footer{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: $c-text;
+  color: $c-fond;
+  height: clamp(20.625rem, 14.5417rem + 27.037vw, 38.875rem);
+
+  a{
+    color: $c-fond;
+  }
+}
+
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////
