--- a/workflow-laravel-mix-6-2/src/styles/utils/_variables.scss
+++ b/workflow-laravel-mix-6-2/src/styles/utils/_variables.scss
@@ -10,6 +10,12 @@ $size-text: 18px;
     font-style: normal;
 }
 
+.txt_big{
+    font-family: "futura-pt", sans-serif;
+    font-weight: 600;
+    font-style: normal
+}
+
 img{
     height: 100%;
     width: 100%;
